views: allow custom link to linewrap in content setting bubbles

This link is sometimes used as a free text field and can be quite long.

Bug: 795226
Change-Id: I46e8f324f2467801dfa5a1ade8df45de8d0587de
Reviewed-on: https://chromium-review.googlesource.com/829594
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526530}
Former-commit-id: eaa2bfb399f238b007064350791a31aea5aec24d